annotation-summary: finish removing FeatureAnnotationPriority